--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,57 @@ p {
 .primary:hover {
   background: #286090;
 }
+
+.round-n-round {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #EFE655;
+}
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
 /* END of BODY */
 
+/* CONTACT PAGE things */
+.contact-hero {
+  /*  */
+  background-image: url('../img/contact-bg.jpg');
+  background-attachment: fixed;
+  position: relative;
+  /* mobile doesn't let the above thing fly. */
+  /* background-color: #EFE655; */
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.overlay-yellow:before {
+
+  display:block;
+  /* content:"hello"; */
+  content:"";
+  position: absolute;
+  /* showes up above/before the background image, need parent to have position: fixed */
+  top: 0px;
+  /* left:20px; */
+  width:100%;
+  height:100%;
+  background: rgba(238, 229, 85, .95);
+}
+
+/* .contact-hero:before {
+    display:block;
+    content:"";
+    position: absolute;
+    width:100%;
+    height:100%;
+    background: rgba(238, 229, 85, .95);
+} */
+
+
+
+/* END OF CONTACT PAGE things */
 
 /* THIS IS THE FOOTER SECTION */
 .footer-section {
